Fix the navigation on Mobile

--- a/app/assets/stylesheets/styles.scss
+++ b/app/assets/stylesheets/styles.scss
@@ -7,6 +7,12 @@ $light-gray: #e4e4e4;
 $slate-gray: #63768a;
 $nav-height-home-lg: 200px;
 $nav-height: 70px;
+$navbar-light-color: rgba($black, .5) !default;
+$navbar-dark-color: rgba($white, .5) !default;
+$navbar-light-toggler-border-color: rgba($black, .1) !default;
+$navbar-dark-toggler-border-color:  rgba($white, .1) !default;
+$navbar-light-toggler-icon-bg: str-replace(url("data:image/svg+xml,%3csvg viewBox='0 0 30 30' xmlns='http://www.w3.org/2000/svg'%3e%3cpath stroke='#{$navbar-light-color}' stroke-width='2' stroke-linecap='round' stroke-miterlimit='10' d='M4 7h22M4 15h22M4 23h22'/%3e%3c/svg%3e"), "#", "%23") !default;
+$navbar-dark-toggler-icon-bg: str-replace(url("data:image/svg+xml,%3csvg viewBox='0 0 30 30' xmlns='http://www.w3.org/2000/svg'%3e%3cpath stroke='#{$navbar-dark-color}' stroke-width='2' stroke-linecap='round' stroke-miterlimit='10' d='M4 7h22M4 15h22M4 23h22'/%3e%3c/svg%3e"), "#", "%23") !default;
 
 body {
   font-family: 'Lato', sans-serif;
@@ -37,6 +43,15 @@ nav {
       text-decoration: none;
     }
   }
+}
+
+.navbar-toggler {
+  color: $navbar-dark-color;
+  border-color: $navbar-dark-toggler-border-color;
+}
+
+.navbar-toggler-icon {
+  background-image: $navbar-dark-toggler-icon-bg;
 }
 
 .barium {
